--- a/processes/investigaciones/update_investigaciones.ipynb
+++ b/processes/investigaciones/update_investigaciones.ipynb
@@ -19,7 +19,7 @@
     "investigaciones_file_id = '1mTpRd2lgxaY_FJj9XDcXHfMHEOfg2c6rxmUE-zR68WA'\n",
     "investigaciones_gid = '1186279524'\n",
     "productos_gid = '1226549997'\n",
-    "data_folder = '../content/data/investigaciones'"
+    "data_folder = '../../content/data/investigaciones'"
    ]
   },
   {
@@ -77,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actualizar productos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -84,7 +91,29 @@
    "source": [
     "# Leer archivo y guardarlo\n",
     "url_productos = f'https://docs.google.com/spreadsheets/d/{investigaciones_file_id}/export?format=csv&gid={productos_gid}'\n",
-    "df_productos = pd.read_csv(url_productos)\n",
+    "df_productos_pre = pd.read_csv(url_productos)\n",
+    "df_productos = pd.DataFrame()\n",
+    "df_productos.to_json(f'{data_folder}/productos.json',index=False, orient='records', indent=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnas_nombre = {\n",
+    "    'ID Investigación':'investigacion_id',\n",
+    "    'Tipo producto':'tipo_producto',\n",
+    "    'Título':'titulo',\n",
+    "    'Incluir en ficha':'incluir_en_ficha',\n",
+    "    'Link para ficha':'url'\n",
+    "}\n",
+    "\n",
+    "for columna,nombre in columnas_nombre.items():\n",
+    "    #print(columna,nombre)\n",
+    "    df_productos[nombre] = df_productos_pre[columna]\n",
+    "\n",
     "df_productos.to_json(f'{data_folder}/productos.json',index=False, orient='records', indent=1)"
    ]
   }
