Investigaciones, con hallazgos y update url investigacionId

--- a/processes/investigaciones/update_investigaciones.ipynb
+++ b/processes/investigaciones/update_investigaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "investigaciones_file_id = '1mTpRd2lgxaY_FJj9XDcXHfMHEOfg2c6rxmUE-zR68WA'\n",
     "investigaciones_gid = '1186279524'\n",
     "productos_gid = '1226549997'\n",
+    "hallazgos_gid = '987529212'\n",
     "data_folder = '../../content/data/investigaciones'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +116,46 @@
     "    df_productos[nombre] = df_productos_pre[columna]\n",
     "\n",
     "df_productos.to_json(f'{data_folder}/productos.json',index=False, orient='records', indent=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Actualizar hallazgos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Leer archivo y guardarlo\n",
+    "url_hallazgos = f'https://docs.google.com/spreadsheets/d/{investigaciones_file_id}/export?format=csv&gid={hallazgos_gid}'\n",
+    "df_hallazgos_pre = pd.read_csv(url_hallazgos)\n",
+    "df_hallazgos = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columnas_nombre = {\n",
+    "    'ID Investigación':'investigacion_id',\n",
+    "    'Número':'orden',\n",
+    "    'Título':'titulo',\n",
+    "    'Texto hallazgo':'texto',\n",
+    "    'Valor':'valor',\n",
+    "    'Variable':'unidad_medida',\n",
+    "}\n",
+    "\n",
+    "for columna,nombre in columnas_nombre.items():\n",
+    "    df_hallazgos[nombre] = df_hallazgos_pre[columna]\n",
+    "\n",
+    "df_hallazgos.to_json(f'{data_folder}/hallazgos.json',index=False, orient='records', indent=1)"
    ]
   }
  ],
