Numerar hallazgos, anio, puntaje, navegacion

--- a/processes/investigaciones/update_investigaciones.ipynb
+++ b/processes/investigaciones/update_investigaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,10 @@
     "    'ID':'id',\n",
     "    'Título':'titulo',\n",
     "    'Descripción':'descripcion',\n",
-    "    'ENTIDAD':'entidad_solicitante',\n",
+    "    'Entidad':'entidad_solicitante',\n",
     "    'EXPEDIENTE':'expediente_orfeo',\n",
     "    'Dirección/Dependencia':'dependencia',\n",
+    "    'puntaje':'puntaje',\n",
     "    'Estado':'estado',\n",
     "    'Linea de investigación':'linea_investigacion',\n",
     "    'Objetivo de la investigación':'objetivo',\n",
@@ -59,18 +60,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "for columna,nombre in columnas_nombre.items():\n",
     "    #print(columna,nombre)\n",
-    "    df_investigaciones[nombre] = df_investigaciones_pre[columna]"
+    "    df_investigaciones[nombre] = df_investigaciones_pre[columna]\n",
+    "\n",
+    "# Agregar la columna año\n",
+    "df_investigaciones['anio'] = 2023;\n",
+    "\n",
+    "# Ordenar por puntaje\n",
+    "df_investigaciones = df_investigaciones.sort_values(by='puntaje', ascending=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
