--- a/processes/visualizaciones/update_visualizaciones.ipynb
+++ b/processes/visualizaciones/update_visualizaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,18 +23,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://docs.google.com/spreadsheets/d/1K4Ly_hU0j6-bIo-SAtXHMeBiizrUEsg4w8XE8o5Lpik/export?format=csv&gid=0\n"
+     ]
+    }
+   ],
    "source": [
     "# Leer archivo y guardarlo\n",
     "url_visualizaciones = f'https://docs.google.com/spreadsheets/d/{visualizaciones_file_id}/export?format=csv&gid={visualizaciones_gid}'\n",
+    "print(url_visualizaciones)\n",
     "df_visualizaciones = pd.read_csv(url_visualizaciones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
