Join hallazgos, hallazgos i060

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -15,31 +15,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_folder = '../../content/data/investigaciones/'"
+    "data_folder = '../../content/data/investigaciones'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_investigaciones_2023 = pd.read_json(data_folder + '2023-investigaciones.json')\n",
-    "df_investigaciones_2024 = pd.read_json(data_folder + '2024-investigaciones.json')\n",
+    "# Consolidar investigaciones\n",
+    "df_investigaciones_2023 = pd.read_json(f'{data_folder}/2023-investigaciones.json')\n",
+    "df_investigaciones_2024 = pd.read_json(f'{data_folder}/2024-investigaciones.json')\n",
     "df_investigaciones = pd.concat([df_investigaciones_2024, df_investigaciones_2023], ignore_index=True)\n",
     "df_investigaciones.to_json(f'{data_folder}/investigaciones.json',index=False, orient='records', indent=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_productos_2023 = pd.read_json(data_folder + '2023-productos.json')\n",
-    "df_productos_2024 = pd.read_json(data_folder + '2024-productos.json')\n",
+    "# Consolidar productos\n",
+    "df_productos_2023 = pd.read_json(f'{data_folder}/2023-productos.json')\n",
+    "df_productos_2024 = pd.read_json(f'{data_folder}/2024-productos.json')\n",
     "df_productos = pd.concat([df_productos_2024, df_productos_2023], ignore_index=True)\n",
     "df_productos.to_json(f'{data_folder}/productos.json',index=False, orient='records', indent=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consolidar hallazgos\n",
+    "df_hallazgos_2023 = pd.read_json(f'{data_folder}/2023-hallazgos.json')\n",
+    "df_hallazgos_2024 = pd.read_json(f'{data_folder}/2024-hallazgos.json')\n",
+    "df_hallazgos = pd.concat([df_hallazgos_2024, df_hallazgos_2023], ignore_index=True)\n",
+    "df_hallazgos.to_json(f'{data_folder}/hallazgos.json',index=False, orient='records', indent=1)"
    ]
   }
  ],
