--- a/processes/investigaciones/update_investigaciones-2024.ipynb
+++ b/processes/investigaciones/update_investigaciones-2024.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,8 @@
     "\n",
     "for columna,nombre in columnas_nombre.items():\n",
     "    df_hallazgos[nombre] = df_hallazgos_pre[columna]\n",
+    "\n",
+    "df_hallazgos = df_hallazgos.dropna(subset=['texto'])\n",
     "\n",
     "df_hallazgos.to_json(f'{data_folder}/2024-hallazgos.json',index=False, orient='records', indent=1)"
    ]
