update investigaciones fuga V8

--- a/processes/investigaciones/update_investigaciones-2024.ipynb
+++ b/processes/investigaciones/update_investigaciones-2024.ipynb
@@ -25,19 +25,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://docs.google.com/spreadsheets/d/1vdCB9ZOyay0eHCqSxNVKcylW4FHU0jeHyAL0kuM2OB0/export?format=csv&gid=1209666804\n"
+     ]
+    }
+   ],
    "source": [
     "# Leer archivo y guardarlo\n",
     "url_investigaciones = f'https://docs.google.com/spreadsheets/d/{investigaciones_file_id}/export?format=csv&gid={investigaciones_gid}'\n",
+    "print(url_investigaciones)\n",
     "df_investigaciones_pre = pd.read_csv(url_investigaciones)\n",
     "df_investigaciones = pd.DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
