Update investigaciones, festivales al parque, hallazgo i071 v2

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -59,23 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 1255583] Update investigaciones, festivales al parque\n",
-      " 2 files changed, 56 insertions(+), 28 deletions(-)\n"
+      "[master aca6e27] Update investigaciones, festivales al parque, hallazgo i071\n",
+      " 2 files changed, 11 insertions(+), 14 deletions(-)\n"
      ]
     },
     {
@@ -83,14 +83,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   bd10c51..1255583  master -> master\n"
+      "   1255583..aca6e27  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, festivales al parque\"\n",
+    "!git commit -m \"Update investigaciones, festivales al parque, hallazgo i071\"\n",
     "!git push origin master"
    ]
   }
