Update investigaciones, Transmilenio, informe final i087

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,38 +59,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "warning: in the working copy of 'content/data/investigaciones/2024-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master aca6e27] Update investigaciones, festivales al parque, hallazgo i071\n",
-      " 2 files changed, 11 insertions(+), 14 deletions(-)\n"
+      "On branch master\n",
+      "nothing to commit, working tree clean\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   1255583..aca6e27  master -> master\n"
+      "Everything up-to-date\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, festivales al parque, hallazgo i071\"\n",
+    "!git commit -m \"Update investigaciones, festivales al parque, hallazgo i070 v3\"\n",
     "!git push origin master"
    ]
   }
