Investigaciones, hide menu and preload all investigaciones data

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -80,8 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master e83186f] Update investigaciones, i095, conclusiones y recomendaciones\n",
-      " 4 files changed, 101 insertions(+), 20 deletions(-)\n"
+      "[master 69b20ba] Update investigaciones, i087, hallazgos\n",
+      " 6 files changed, 131 insertions(+), 49 deletions(-)\n"
      ]
     },
     {
@@ -89,14 +89,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   58e39f0..e83186f  master -> master\n"
+      "   e83186f..69b20ba  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i095, conclusiones y recomendaciones\"\n",
+    "!git commit -m \"Update investigaciones, i087, hallazgos\"\n",
     "!git push origin master"
    ]
   }
