Nota matriz de riesgos, powerbi

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -71,17 +71,15 @@
       "warning: in the working copy of 'content/data/investigaciones/2024-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 69b20ba] Update investigaciones, i087, hallazgos\n",
-      " 6 files changed, 131 insertions(+), 49 deletions(-)\n"
+      "[master 5a6f72b] Update investigaciones, i078, indicadores bienestar animal\n",
+      " 2 files changed, 14 insertions(+), 14 deletions(-)\n"
      ]
     },
     {
@@ -89,14 +87,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   e83186f..69b20ba  master -> master\n"
+      "   c6a889e..5a6f72b  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i087, hallazgos\"\n",
+    "!git commit -m \"Update investigaciones, i078, indicadores bienestar animal\"\n",
     "!git push origin master"
    ]
   }
