--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,27 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'content/data/investigaciones/2024-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2024-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2023-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master b2793de] Update investigaciones, i064, EBC practicas deportivas 2024, productos 2\n",
-      " 3 files changed, 3812 insertions(+), 12 deletions(-)\n"
+      "[master 23fe16d] Update investigaciones, i035, Somos Hallazgos\n",
+      " 5 files changed, 108 insertions(+), 14 deletions(-)\n"
      ]
     },
     {
@@ -87,14 +88,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   32e4687..b2793de  master -> master\n"
+      "   b2793de..23fe16d  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i064, EBC practicas deportivas 2024, productos 2\"\n",
+    "!git commit -m \"Update investigaciones, i035, Somos Hallazgos\"\n",
     "!git push origin master"
    ]
   }
