Update investigaciones, i064, Presentación EBC Practicas Deportivas

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -66,21 +66,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "warning: in the working copy of 'content/data/investigaciones/2023-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2023-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/investigaciones/2023-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'content/data/investigaciones/2024-productos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'content/data/visualizaciones/visualizaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/visualizaciones/update_visualizaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 23fe16d] Update investigaciones, i035, Somos Hallazgos\n",
-      " 5 files changed, 108 insertions(+), 14 deletions(-)\n"
+      "[master 3b4297c] Update investigaciones, i035, Somos Hallazgos\n",
+      " 15 files changed, 575 insertions(+), 486 deletions(-)\n",
+      " create mode 100644 projects/investigaciones/thumbnails/63.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/65.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/77.jpg\n",
+      " create mode 100644 projects/investigaciones/thumbnails/87.jpg\n",
+      " create mode 100644 projects/visualizaciones/thumbnails/52.jpg\n",
+      " create mode 100644 projects/visualizaciones/thumbnails/53.jpg\n",
+      " create mode 100644 projects/visualizaciones/thumbnails/54.jpg\n",
+      " create mode 100644 projects/visualizaciones/thumbnails/55.jpg\n"
      ]
     },
     {
@@ -88,7 +97,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   b2793de..23fe16d  master -> master\n"
+      "   6175ead..3b4297c  master -> master\n"
      ]
     }
    ],
