Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -72,24 +72,16 @@
       "warning: in the working copy of 'content/data/investigaciones/hallazgos.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/investigaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
       "warning: in the working copy of 'content/data/investigaciones/productos.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'content/data/visualizaciones/visualizaciones.json', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'processes/visualizaciones/update_visualizaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+      "warning: in the working copy of 'processes/investigaciones/join_investigaciones.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'processes/investigaciones/update_investigaciones-2024.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 3b4297c] Update investigaciones, i035, Somos Hallazgos\n",
-      " 15 files changed, 575 insertions(+), 486 deletions(-)\n",
-      " create mode 100644 projects/investigaciones/thumbnails/63.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/65.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/77.jpg\n",
-      " create mode 100644 projects/investigaciones/thumbnails/87.jpg\n",
-      " create mode 100644 projects/visualizaciones/thumbnails/52.jpg\n",
-      " create mode 100644 projects/visualizaciones/thumbnails/53.jpg\n",
-      " create mode 100644 projects/visualizaciones/thumbnails/54.jpg\n",
-      " create mode 100644 projects/visualizaciones/thumbnails/55.jpg\n"
+      "[master 91b02a9] Update investigaciones, i064, Presentación EBC Practicas Deportivas\n",
+      " 4 files changed, 26 insertions(+), 17 deletions(-)\n"
      ]
     },
     {
@@ -97,14 +89,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   6175ead..3b4297c  master -> master\n"
+      "   3b4297c..91b02a9  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i035, Somos Hallazgos\"\n",
+    "!git commit -m \"Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida\"\n",
     "!git push origin master"
    ]
   }
