--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 91b02a9] Update investigaciones, i064, Presentación EBC Practicas Deportivas\n",
-      " 4 files changed, 26 insertions(+), 17 deletions(-)\n"
+      "[master 657707b] Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida\n",
+      " 7 files changed, 93 insertions(+), 21 deletions(-)\n"
      ]
     },
     {
@@ -89,7 +89,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   3b4297c..91b02a9  master -> master\n"
+      "   91b02a9..657707b  master -> master\n"
      ]
     }
    ],
