Update investigaciones, i100, PCB2038 primera ficha

--- a/processes/investigaciones/join_investigaciones.ipynb
+++ b/processes/investigaciones/join_investigaciones.ipynb
@@ -27,7 +27,11 @@
     "# Consolidar investigaciones\n",
     "df_investigaciones_2023 = pd.read_json(f'{data_folder}/2023-investigaciones.json')\n",
     "df_investigaciones_2024 = pd.read_json(f'{data_folder}/2024-investigaciones.json')\n",
+    "df_investigaciones_2025 = pd.read_json(f'{data_folder}/2025-investigaciones.json')\n",
+    "\n",
     "df_investigaciones = pd.concat([df_investigaciones_2024, df_investigaciones_2023], ignore_index=True)\n",
+    "df_investigaciones = pd.concat([df_investigaciones, df_investigaciones_2025], ignore_index=True)\n",
+    "\n",
     "df_investigaciones.to_json(f'{data_folder}/investigaciones.json',index=False, orient='records', indent=1)"
    ]
   },
@@ -40,7 +44,11 @@
     "# Consolidar productos\n",
     "df_productos_2023 = pd.read_json(f'{data_folder}/2023-productos.json')\n",
     "df_productos_2024 = pd.read_json(f'{data_folder}/2024-productos.json')\n",
+    "df_productos_2025 = pd.read_json(f'{data_folder}/2025-productos.json')\n",
+    "\n",
     "df_productos = pd.concat([df_productos_2024, df_productos_2023], ignore_index=True)\n",
+    "df_productos = pd.concat([df_productos, df_productos_2025], ignore_index=True)\n",
+    "\n",
     "df_productos.to_json(f'{data_folder}/productos.json',index=False, orient='records', indent=1)"
    ]
   },
@@ -53,8 +61,24 @@
     "# Consolidar hallazgos\n",
     "df_hallazgos_2023 = pd.read_json(f'{data_folder}/2023-hallazgos.json')\n",
     "df_hallazgos_2024 = pd.read_json(f'{data_folder}/2024-hallazgos.json')\n",
+    "df_hallazgos_2025 = pd.read_json(f'{data_folder}/2025-hallazgos.json')\n",
+    "\n",
     "df_hallazgos = pd.concat([df_hallazgos_2024, df_hallazgos_2023], ignore_index=True)\n",
+    "df_hallazgos = pd.concat([df_hallazgos, df_hallazgos_2025], ignore_index=True)\n",
+    "\n",
     "df_hallazgos.to_json(f'{data_folder}/hallazgos.json',index=False, orient='records', indent=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter(f'{data_folder}/investigaciones.xlsx', engine='openpyxl', mode='a', if_sheet_exists='replace') as writer:\n",
+    "    df_investigaciones.to_excel(writer, sheet_name='investigaciones', index=False)\n",
+    "    df_productos.to_excel(writer, sheet_name='productos', index=False)\n",
+    "    df_hallazgos.to_excel(writer, sheet_name='hallazgos', index=False)"
    ]
   },
   {
@@ -80,8 +104,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 657707b] Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida\n",
-      " 7 files changed, 93 insertions(+), 21 deletions(-)\n"
+      "[master 5c9d569] Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida, titulo y descripcion\n",
+      " 3 files changed, 8 insertions(+), 8 deletions(-)\n"
      ]
     },
     {
@@ -89,14 +113,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/observatoriocultura/contenidos.git\n",
-      "   91b02a9..657707b  master -> master\n"
+      "   657707b..5c9d569  master -> master\n"
      ]
     }
    ],
    "source": [
     "# Actualizar el repositorio en GitHub\n",
     "!git add -A\n",
-    "!git commit -m \"Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida\"\n",
+    "!git commit -m \"Update investigaciones, i064, Presentacion EBC Practicas Deportivas y Calidad de Vida, titulo y descripcion\"\n",
     "!git push origin master"
    ]
   }
